--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://aaaventura.github.io/code-assignment-12",
   "name": "code-assignment-12-v2",
   "version": "0.1.0",
   "private": true,
@@ -20,6 +21,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy-storybook": "gh-pages -d storybook-static",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -50,6 +53,7 @@
     "@storybook/preset-create-react-app": "^9.1.10",
     "@storybook/react-webpack5": "^9.1.10",
     "eslint-plugin-storybook": "^9.1.10",
+    "gh-pages": "^6.3.0",
     "prop-types": "^15.8.1",
     "react-scripts": "^5.0.1",
     "storybook": "^9.1.10",
